_sass/main.scss
$backgroundColor: #FBF7F4;
$bodyColor: #000000;
$bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";

body, html {
  // background: $backgroundColor;
  background-color: #a9a9a9;
  color: $bodyColor;
  height: 100%;
  font-family: $bodyFont;
  margin: 0px;
}

// html {
//   height: 100%;
// }

h1, h2 {
  margin-bottom: 20px;
  margin-top: 30px;
  color: #6B0F1A;
}

.side-menu .icons a{
  color:$backgroundColor;
  font-size: 30px;
  margin-left: 5px;
  margin-right: 5px;
}

.navbar-mobile {
  background-color: hsl(8, 60%, 73%);
  position: sticky;
  top: 0;
  left: 0;
  z-index: 1000;
}

.navbar-mobile a, .navbar-mobile a:visited, .navbar-mobile a:hover {
  color: #ffffff;
}

#navbar-mobile-links{
  padding: 10px 15px;
  font-size: 1.2rem;
}

.navbar-mobile .navbar-toggler {
  background-color: transparent;
  border-color: transparent;

}

#main {
  display: flex;
  height: 100%;
}

#home-container {
  background: rgba(0,0,0,0.6) url("../img/chicago-benjamin-suter.jpeg"); 
  background-blend-mode: darken;
  background-size: cover;
  background-position: 51%;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  width: 100%;
  transition: width 0.5s linear;
}

// .side-menu-expanded {
//   width: 100%;
// }

// .side-menu-folded {
//   width: 450px;
// }

#left-sidebar {
  background: rgba(0,0,0,0.6) url("../img/chicago-benjamin-suter.jpeg"); 
  background-blend-mode: darken;
  background-size: cover;
  background-position: 51%;
  display: flex;
  flex-direction: column;
  flex: 0 0 350px;
  align-items: center;
  justify-content: center;
  position: relative;
  overflow-y: auto;
  transition: width 0.5s linear;
}

.side-menu {
  align-items: center;
  flex-direction: column;
  display: flex;
  justify-content: center;
  position: relative;
  text-align: center;
}

.side-menu a, .side-menu a:visited, .side-menu a:hover{
  color: $backgroundColor;
  text-decoration: none;
}

a, a:hover, a:visited{
  color: hsl(8, 66%, 45%);
  text-decoration: none;
}

#name {
  font-size: 30px;
  line-height: 1.1em;
  color: #ffffff;
  margin-top: 15px;
}

.divider {
  background-color: #E8998D;
  height: 5px;
  width: 200px;
  border-radius: 100px;
  margin: 30px;
}

.dots {
  display: flex;
}

.circle {
  margin-left: 5px;
  margin-right: 5px;
  height: 10px;
  width: 10px;
}

.menu-item {
  font-size: 20px;
  line-height: 2em;
}

.profile-pic {
  display: block;
  border-radius: 50%;
  border-color: white;
  border-width: 4px;
  border-style: solid;
  width: 200px;
  height: 200px;
  margin-top: 30px;
  transform: rotate(-15deg);
}

#page-content-container {
  background-color: #FBF7F4;
  flex-grow: 2;
  overflow-y: auto;
}

#page-content {
  padding: 10px 30px;
}

span.ap-highlight-pink {
  background: linear-gradient(rgba(255,255,255,0) 65%,#fcc4bc 65%,#fcc4bc);
}

.gallery {
  list-style: none;
  padding: 0;
  margin: 0;

  display: flex;
  flex-wrap: wrap;
  gap: 10px;
  margin-bottom: 1rem;
}

.gallery li {
 flex: 1 1 20rem;
 min-height: 30vh;
 max-height: 30vh;
}

.gallery img {
  object-fit: cover;
  width: 100%;
  height: 100%;

  opacity: 1;
  transition: 180ms opacity ease-in-out;
}

.gallery img:hover {
  opacity: 0.7;
}

.videoWrapper-16-9 {
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
  margin-bottom: 30px;
}

.videoWrapper-16-9 iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

